--- a/style.css
+++ b/style.css
@@ -5,10 +5,11 @@
 
 body {
   line-height: 1.4em;
-  font-family: 'Nanum Gothic', sans-serif;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  box-sizing: border-box;
 }
 
-a {
+.show-text a {
   text-decoration: none;
   padding: 10px;
   background: skyblue;
@@ -89,28 +90,38 @@ a {
 
 .sponsor {
   text-align: center;
+  margin-bottom: 20%;
 }
 
 .spons-item {
+  width: 80%;
+  margin: 0 auto;
   text-align: center;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   height: 50vh;
   background: white;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
 .s-item {
-  background-color: yellow;
-  width: 150px;
-  height: 120px;
+  margin: 20px;
+}
+
+.s-item img {
+  display: inline-block;
+  width: 200px;
+  vertical-align: middle;
+  padding: 20 20 20 20px;
 }
 
 footer {
-  background-color: black;
+  background-color: rgb(20, 19, 19);
+  height: 20vh;
   color: #fff;
   display: flex;
+  align-items: center;
   justify-content: space-around;
 }
 
@@ -118,13 +129,18 @@ footer {
   display: flex;
 }
 
+.social img {
+  margin: 10px;
+  padding: 10px;
+}
+
 @keyframes showcase-text {
   0% {
-    transform: rotate(0) translateY(-50px);
+    transform: translateY(-50px);
     opacity: 0;
   }
   100% {
-    transform: rotate(0) translateY(0);
+    transform: translateY(0);
     opacity: 1;
   }
 }
